--- a/Rotation 3/html/perfil.html
+++ b/Rotation 3/html/perfil.html
@@ -11,11 +11,11 @@
 
 <div id="nav">
     <img class="logo" src="/Galery/BannerRotation.png" alt="logo rotation">
-    <a href="http://127.0.0.1:5500/html/home.html">Home</a>
-    <a href="http://127.0.0.1:5500/html/trocas.html">Trocas</a>
-    <a href="http://127.0.0.1:5500/html/shop.html">Shop</a>
-    <a href="http://127.0.0.1:5500/html/social.html">Social</a>
-    <a href="http://127.0.0.1:5500/html/perfil.html">Perfil</a>
+    <a href="/home.html">Home</a>
+    <a href="/trocas.html">Trocas</a>
+    <a href="/shop.html">Shop</a>
+    <a href="/social.html">Social</a>
+    <a href="/perfil.html">Perfil</a>
     <input type="text" id="txtBusca" placeholder="Buscar"/>
 </div>
 
